# take_home_assesment_R

./: .gitignore  Makefile  render.yaml
ENG #4/: Readily Take Home #4 (ENG).docx
backend/: .env.example  pyproject.toml
backend/sample-data/: policies.json  questions.json  results.json
backend/src/readily/: config.py
backend/src/readily/application/: candidate_selector.py
backend/src/readily/application/use_cases/: build_inventory.py  decompose_questionnaire.py  extract_claims.py  ingest_policy.py  judge_question.py
backend/src/readily/domain/: entities.py
backend/src/readily/infrastructure/llm/: gemini.py  prompts.py
backend/src/readily/infrastructure/pdf/: pdftotext.py
backend/src/readily/infrastructure/storage/: json_store.py
backend/src/readily/interface/api/: _fallback.py  app.py  deps.py
backend/src/readily/interface/api/routes/: info.py  policies.py  questions.py  results.py  upload.py
backend/src/readily/interface/cli/: main.py
backend/tests/: _stubs.py  conftest.py
backend/tests/api/: test_info_route.py  test_policies_route.py  test_questions_route.py  test_results_route.py  test_upload_route.py
backend/tests/application/: test_candidate_selector.py
backend/tests/application/use_cases/: test_build_inventory.py  test_extract_claims.py  test_ingest_policy.py  test_inventory_cache.py  test_judge_question.py
backend/tests/fixtures/: questionnaire_sample.txt
backend/tests/infrastructure/: test_json_store.py
data/: policies.json  questions.json  results.json
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  (+2 more)
(+16 files in other folders)
