[project]
name = "readily"
version = "0.1.0"
description = "Readily Module: decompose regulatory questionnaire questions and P&P policies into atomic claims, then match and flag contradictions."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "google-genai>=1.0",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
readily = "readily.interface.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["readily"]

[[tool.mypy.overrides]]
module = ["google.genai.*", "google.*"]
ignore_missing_imports = true
